# scantailor

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  Application.h  AutoManualMode.h  BackgroundTask.h  BasicImageView.cpp  BasicImageView.h  BlackOnWhiteEstimator.cpp  BlackOnWhiteEstimator.h  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ChangedStateItemDelegate.h  CollapsibleGroupBox.cpp  CollapsibleGroupBox.h  ColorScheme.h  ColorSchemeManager.cpp  ColorSchemeManager.h  CommandLine.cpp  CommandLine.h  ConsoleBatch.cpp  ConsoleBatch.h  DarkColorScheme.cpp  DarkColorScheme.h  DebugImageView.cpp  DebugImageView.h  DebugImages.cpp  DebugImages.h  DefaultParams.cpp  DefaultParams.h  DefaultParamsDialog.cpp  DefaultParamsDialog.h  DefaultParamsProfileManager.cpp  DefaultParamsProfileManager.h  DefaultParamsProvider.cpp  DefaultParamsProvider.h  Despeckle.cpp  (+116 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: CollectDlls.cmake.in  SetDefaultGccFlags.cmake
compat/: boost_multi_index_foreach_fix.h
crash_reporter/: CMakeLists.txt  CrashReportDialog.cpp  CrashReportDialog.h
dewarping/: CMakeLists.txt  Curve.cpp  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DetectVertContentBounds.cpp  DistortionModel.cpp  DistortionModelBuilder.cpp  DistortionModelBuilder.h  TextLineRefiner.cpp  TextLineRefiner.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  TowardsLineTracer.cpp
docs/: DPI_BYPASS_WORKAROUND.md  ISTRUZIONI_ADMIN_FIREWALL.txt
filters/deskew/: ApplyDialog.cpp  ApplyDialog.h  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp  Thumbnail.h
filters/fix_orientation/: ApplyDialog.cpp  ApplyDialog.h  CMakeLists.txt  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  Settings.cpp  Settings.h  Task.cpp  Task.h
filters/output/: ApplyColorsDialog.cpp  ApplyColorsDialog.h  BlackWhiteOptions.cpp  BlackWhiteOptions.h  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  ChangeDewarpingDialog.cpp  ChangeDewarpingDialog.h  ChangeDpiDialog.cpp  ChangeDpiDialog.h  ColorGrayscaleOptions.cpp  ColorGrayscaleOptions.h  ColorParams.cpp  ColorParams.h  ColorPickupInteraction.h  DespeckleState.h  DespeckleView.cpp  DespeckleView.h  DewarpingView.cpp  DewarpingView.h  FillColorProperty.h  FillZoneEditor.cpp  FillZoneEditor.h  Filter.cpp  Filter.h  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OutputGenerator.cpp  OutputGenerator.h  Params.cpp  Params.h  PictureLayerProperty.cpp  PictureLayerProperty.h  PictureZoneEditor.cpp  PictureZoneEditor.h  (+14 more)
filters/page_split/: CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OrderBySplitTypeProvider.h  PageLayout.cpp  PageLayoutEstimator.cpp  PageLayoutEstimator.h  Settings.cpp  Settings.h  SplitModeDialog.cpp  SplitModeDialog.h  Task.cpp  Task.h  Thumbnail.h  UnremoveButton.h  VertLineFinder.cpp  VertLineFinder.h
foundation/: AlignedArray.h  CMakeLists.txt  DynamicPool.h  FastQueue.h  Grid.h  IntrusivePtr.h  MatT.h  PropertySet.cpp  Proximity.h  QtSignalForwarder.cpp  QtSignalForwarder.h  SafeDeletingQObjectPtr.h  VecT.h
imageproc/: BinaryImage.cpp  CMakeLists.txt  ColorSegmenter.cpp  ColorSegmenter.h  ConnCompEraser.cpp  ConnCompEraserExt.h  ConnectivityMap.cpp  ConnectivityMap.h  GaussBlur.cpp  GaussBlur.h  HoughLineDetector.cpp  ImageCombination.cpp  ImageCombination.h  InfluenceMap.cpp  InfluenceMap.h  MaxWhitespaceFinder.cpp  MaxWhitespaceFinder.h  Morphology.cpp  PolygonRasterizer.cpp  PolygonUtils.cpp  PolynomialSurface.cpp  Posterizer.h  RastLineFinder.cpp  RastLineFinder.h  RasterOp.h  RasterOpGeneric.h  SEDM.cpp  Sobel.h
interaction/: CMakeLists.txt  DragHandler.cpp  DragHandler.h  DragWatcher.h  DraggableLineSegment.h  DraggableObject.h  DraggablePoint.h  InteractionHandler.cpp  InteractionHandler.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.h  ZoomHandler.cpp  ZoomHandler.h
math/: ArcLengthMapper.cpp  CMakeLists.txt  LineBoundedByRect.cpp  LinearSolver.h  XSpline.cpp
phone-simulator/: README.md  index.html  package-lock.json  package.json
tests/: CMakeLists.txt  TestContentSpanFinder.cpp  TestFilterParams.cpp  TestSettingsThreadSafety.cpp
tools/: corso_ingest.py
ui/: MainWindow.ui  NewOpenProjectPanel.ui  ProjectFilesDialog.ui  SettingsDialog.ui  SystemLoadWidget.ui
zones/: BasicSplineVisualizer.cpp  CMakeLists.txt  EditableSpline.cpp  EditableZoneSet.cpp  EditableZoneSet.h  SerializableSpline.cpp  SerializableSpline.h  SplineVertex.cpp  SplineVertex.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneContextMenuItem.h  ZoneCreationInteraction.cpp  ZoneCreationInteraction.h  ZoneCreationMode.h  ZoneDefaultInteraction.cpp  ZoneDefaultInteraction.h  ZoneInteractionContext.cpp  ZoneInteractionContext.h  ZoneSet.cpp  ZoneVertexDragInteraction.cpp  ZoneVertexDragInteraction.h
(+88 files in other folders)
